.openshift/deploy/inventory/deployment.yaml
# -----------------------------------------------------------------------------
# Author: Alejandro M. BERNARDIS
# Email: alejandro.bernardis at gmail.com
# -----------------------------------------------------------------------------
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: inventory
  annotations:
    image.openshift.io/triggers: |-
      [{
        "from":{
          "kind":"ImageStreamTag",
          "name":"inventory:latest"
        },
        "fieldPath":"spec.template.spec.containers[?(@.name==\"inventory\")].image",
        "pause":"false"
      }]
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      containers:
        - name: inventory
          image: inventory:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          resources:
            requests:
              cpu: 500m
              memory: 2048Mi
            limits:
              cpu: 2000m
              memory: 4096Mi
