.openshift/deploy/inventory/route.yaml
# -----------------------------------------------------------------------------
# Author: Alejandro M. BERNARDIS
# Email: alejandro.bernardis at gmail.com
# -----------------------------------------------------------------------------
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: inventory
  annotations:
    haproxy.router.openshift.io/timeout: 15m
spec:
  to:
    kind: Service
    name: inventory
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
